<resources>
    <string name="app_name">PaymentApplication</string>
    <string name="button_register_text">Register</string>
    <string name="button_login_text">Login</string>
    <string name="button_payment_text">Payment</string>
    <string name="button_login_information_text">Login Information</string>
    <string name="button_success_logins_text">Success Logins</string>
    <string name="button_fail_logins_text">Fail Logins</string>
    <string name="button_make_payment_text">Make Payment</string>
    <string name="button_payments_text">Payments</string>
    <string name="button_pay_text">Pay</string>
    <string name="button_clear_text">Clear</string>
    <string name="button_close_text">Close</string>
    <string name="button_list_payments_text">List Paymetns</string>

    <string name="edittext_username_hint_text">Input username</string>
    <string name="edittext_password_hint_text">Input password</string>
    <string name="edittext_firstname_hint_text">Input first name</string>
    <string name="edittext_middlename_hint_text">Input middle name</string>
    <string name="edittext_lastname_hint_text">Input last name</string>
    <string name="edittext_birthdate_hint_text">Input birthdate (DD/MM/YYYY -> 13.10.1977)</string>
    <string name="edittext_description_hint_text">Input description</string>
    <string name="edittext_unit_price_hint_text">Input quantity</string>
    <string name="edittext_quantity_hint_text">Input unit price</string>

    <string name="textview_status_paid_text">Paid</string>
    <string name="textview_status_not_paid_text">Not Paid</string>
    <string name="textview_status_amount_needed_text">Amount Needed</string>
    <string name="textview_status_unit_price_needed_text">Unit price needed</string>
    <string name="textview_status_desc_needed_text">Description needed</string>

    <string name="alertdialog_login_info_title_text">Login Information</string>
    <string name="alertdialog_login_info_ok_text">OK</string>
    <string name="alertdialog_register_close_title_text">Alert</string>
    <string name="alertdialog_register_close_message_text">If you close you will lose all information</string>
    <string name="alertdialog_register_close_yes_button_text">Yes</string>
    <string name="alertdialog_register_close_no_button_text">No</string>

</resources>