<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="org.csystem.android.app.payment.viewmodel.MakePaymentActivityListenerViewModel"/>
        <import type="org.csystem.android.app.payment.data.service.dto.PaymentSaveDTO"/>
        <import type="org.csystem.android.app.payment.converter.DoubleStringConverter"/>
        <variable name="viewModel" type="MakePaymentActivityListenerViewModel" />
        <variable name="paymentInfo" type="PaymentSaveDTO" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/makePaymentActivityLinearLayoutMain"
        tools:context=".MakePaymentActivity">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@={paymentInfo.desc}"
            android:hint="@string/edittext_description_hint_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={DoubleStringConverter.INSTANCE.toStr(paymentInfo.price)}"
            android:hint="@string/edittext_quantity_hint_text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="@={DoubleStringConverter.INSTANCE.toStr(paymentInfo.quantity)}"
            android:hint="@string/edittext_unit_price_hint_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handlePayButton()}"
            android:text="@string/button_make_payment_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handleClearButton()}"
            android:text="@string/button_clear_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handleCloseButton()}"
            android:text="@string/button_close_text" />
    </LinearLayout>
</layout>