<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="org.csystem.android.app.payment.viewmodel.OperationsActivityListenerViewModel"/>
        <variable name="viewModel" type="OperationsActivityListenerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".OperationsActivity">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handlePaymentButton()}"
            android:text="@string/button_payment_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handleLoginInformationButton()}"
            android:text="@string/button_login_information_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->viewModel.handleCloseButton()}"
            android:text="@string/button_close_text" />
    </LinearLayout>
</layout>